--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: Build Next.js project
-        run: npm run build && npm run export
+        run: npm run build 
 
       - name: Push build to another branch
         uses: s0/git-publish-subdir-action@develop
