--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "5.21.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -25,10 +26,12 @@
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-input-mask": "^2.0.4",
     "react-remove-scroll": "^2.6.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.3",
@@ -39,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
