--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@radix-ui/themes": "^3.1.4",
     "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.7",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
     "prisma": "^5.21.1",
