--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:senha@localhost:3306/plsregistro"
-# DATABASE_URL="mysql://u469430509_plaviacao:Sq=jJP>n9@srv1720.hstgr.io/u469430509_plaviacao"
+# DATABASE_URL="mysql://root:senha@localhost:3306/plsregistro"
+DATABASE_URL="mysql://u469430509_plaviacao:Sq=jJP>n9@srv1720.hstgr.io/u469430509_plaviacao"
