--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 # DATABASE_URL="mysql://root:senha@localhost:3306/plsregistro"
 DATABASE_URL="mysql://u469430509_plaviacao:Sq=jJP>n9@srv1720.hstgr.io/u469430509_plaviacao"
+NEXT_PUBLIC_TOKEN="asdasdasdasdasdasd"
